# NLP-based-voice-command-automation-system

./: .env.example  .gitignore  ARCHITECTURE.md  DELIVERY_SUMMARY.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_INDEX.md  QUICKSTART.md  README.md  SYSTEM_OVERVIEW.md  WEB_INTERFACE.md  app.py  examples.py  main.py  pyproject.toml  setup.sh
config/: commands.yaml  intents.yaml
src/: __init__.py  asr.py  cli.py  config.py  mapper.py  nlu.py  processor.py
src/voice_automation/: __init__.py
templates/: index.html
tests/: __init__.py  test_asr.py  test_config.py  test_mapper.py  test_nlu.py  test_processor.py
